fix(release): include declarations and add exports section

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
         "noImplicitAny": true,
         "sourceMap": true,
         "outDir": "dist",
+        "declaration": true,
         "stripInternal": true
     },
     "include": [
