--- a/package.json
+++ b/package.json
@@ -11,6 +11,16 @@
   "files": [
     "dist/**/*"
   ],
+  "exports": {
+    ".": {
+      "import": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.js"
+      }
+    }
+  },
+  "types": "./dist/index.d.ts",
+  "module": "./dist/index.js",
   "scripts": {
     "build": "tsc",
     "format": "biome format . --write",
