--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-    "$schema": "https://biomejs.dev/schemas/1.5.3/schema.json",
+    "$schema": "https://biomejs.dev/schemas/1.7.1/schema.json",
     "organizeImports": {
         "enabled": true
     },
@@ -10,35 +10,29 @@
         "enabled": true,
         "rules": {
             "recommended": true,
-            "nursery": {
-                "noEmptyTypeParameters": "error",
-                "noInvalidUseBeforeDeclaration": "error",
-                "noUnusedImports": "error",
-                "noUnusedPrivateClassMembers": "error",
-                "noUselessLoneBlockStatements": "error",
-                "noUselessTernary": "error",
-                "useExportType": "error",
-                "useImportType": "error",
-                "useForOf": "error",
-                "useGroupedTypeImport": "error"
-            },
             "complexity": {
                 "noExcessiveCognitiveComplexity": "warn",
                 "useSimplifiedLogicExpression": "error"
             },
             "correctness": {
-                "noNewSymbol": "error"
+                "noNewSymbol": "error",
+                "noUnusedImports": "error",
+                "noUnusedPrivateClassMembers": "error",
+                "useHookAtTopLevel": "error"
             },
             "style": {
                 "useBlockStatements": "error",
                 "useCollapsedElseIf": "error",
+                "useForOf": "error",
+                "useFragmentSyntax": "error",
                 "useShorthandArrayType": "error",
                 "useShorthandAssign": "error",
                 "useSingleCaseStatement": "error"
             },
             "suspicious": {
                 "noApproximativeNumericConstant": "warn",
-                "noConsoleLog": "error"
+                "noConsoleLog": "error",
+                "noEmptyBlockStatements": "error"
             }
         }
     },
