--- a/package.json
+++ b/package.json
@@ -44,5 +44,6 @@
     "koa-tree-router": "^0.12.1",
     "openapi3-ts": "^4.3.1",
     "zod": "^3.23.4"
-  }
+  },
+  "packageManager": "pnpm@8.15.6+sha256.01c01eeb990e379b31ef19c03e9d06a14afa5250b82e81303f88721c99ff2e6f"
 }
